--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -124,13 +124,13 @@
             <div class="footer-bottom">
                 <div class="footer-container">
                     <div class="row row-footer">
-                        <div class="col-sm-4">
+                        <div class="col-sm-4 col-xs-12">
                             <div class="left-f">
                                 <img src="img/footerlogo.png" alt="">
                             </div>
                         </div>
-                        <div class="col-sm-4">
-                            <ul class="lista-footer">
+                        <div class="col-sm-4 col-xs-12">
+                            <ul class="lista-footer none">
                                 <li class="list-title">MegaSport</li>
                                 <li><a href="#aboutUs">Sobre nós</a></li>
                                 <li><a href="">Lojas</a></li>
@@ -138,7 +138,7 @@
                                 <li><a href="">Opiniões</a></li>
                             </ul>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-4 col-xs-12 pad">
                             <ul class="lista-footer">
                                 <li class="list-title">Contactos</li>
                                 <li><a href="">+351 911 911 911</a></li>
