--- a/srcproj/form.html
+++ b/srcproj/form.html
@@ -50,23 +50,23 @@
             <div class="container-inputs">
                 <div class="subject-area">
                     <span class="title-box">Assunto</span>
-                    <input type="text" maxlength="84" name="subject" id="subject" placeholder="Assunto" value="">
+                    <input type="text" maxlength="84" name="subject" id="subject" placeholder="Assunto" value="" required>
                 </div>
 
                 <div class="opinion-area pad-area">
                     <span class="title-box">Opinião</span>
-                    <textarea name="opinion" maxlength="425" placeholder="Escreva aqui a sua opinião" id="opinion" rows="5"></textarea>
+                    <textarea name="opinion" maxlength="425" placeholder="Escreva aqui a sua opinião" id="opinion" rows="5" required></textarea>
                 </div>
 
                 <div class="name-area pad-area">
                     <div class="row">
                         <div class="col-sm-6 col-xs-6">
                             <span class="title-box">Primeiro Nome</span>
-                            <input type="text" maxlength="42" name="nomeclip" id="nomeclip" placeholder="Nome" value="">
+                            <input type="text" maxlength="42" name="nomeclip" id="nomeclip" placeholder="Nome" value="" required>
                         </div>
                         <div class="col-sm-6 col-xs-6">
                             <span class="title-box">Apelido</span>
-                            <input type="text" maxlength="42" name="nomeclis" id="nomeclis" placeholder="Apelido" value="">  
+                            <input type="text" maxlength="42" name="nomeclis" id="nomeclis" placeholder="Apelido" value="" required>  
                         </div>
                     </div>
 
@@ -74,7 +74,7 @@
 
                 <div class="email-area pad-area">
                     <span class="title-box">E-mail</span>
-                    <input type="email" maxlength="320" name="emailcli" id="emailcli" placeholder="exemplo@mail.pt" value="">
+                    <input type="email" maxlength="320" name="emailcli" id="emailcli" placeholder="exemplo@mail.pt" value="" required>
                 </div> 
 
                 <div class="submit-area">
