--- a/srcproj/form.html
+++ b/srcproj/form.html
@@ -99,17 +99,14 @@
                             <li class="list-title">MegaSport</li>
                             <li><a href="">Sobre nós</a></li>
                             <li><a href="">Lojas</a></li>
-                            <li><a href="">Contactos</a></li>
-                            <li><a href="">Opiniões</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-xs-12 pad">
                         <ul class="lista-footer">
                             <li class="list-title">Contactos</li>
-                            <li><a href="">+351 911 911 911</a></li>
-                            <li><a href="">MegaSport@email.pt</a></li>
-                            <li><a href="">Segunda a sexta das 8:30 ás 18:00</a></li>
-                            <li><a href="">Dar Opinião</a></li>
+                            <li>+351 911 911 911</li>
+                            <li>MegaSport@email.pt</li>
+                            <li>Segunda a sexta das 8:30 ás 18:00</li>
                         </ul>
                     </div>
                 </div>
