--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -132,19 +132,16 @@
                         <div class="col-sm-4 col-xs-12">
                             <ul class="lista-footer none">
                                 <li class="list-title">MegaSport</li>
-                                <li><a href="#aboutUs">Sobre nós</a></li>
+                                <li class="goTop"><a onclick="goTop(); return false;">Sobre nós</a></li>
                                 <li><a href="">Lojas</a></li>
-                                <li><a href="">Contactos</a></li>
-                                <li><a href="">Opiniões</a></li>
                             </ul>
                         </div>
-                        <div class="col-sm-4 col-xs-12 pad">
+                        <div class="col-sm-4 col-xs-12 pada">
                             <ul class="lista-footer">
                                 <li class="list-title">Contactos</li>
-                                <li><a href="">+351 911 911 911</a></li>
-                                <li><a href="">MegaSport@email.pt</a></li>
-                                <li><a href="">Abertos das 8:30 as 18:00</a></li>
-                                <li><a href="">Dar Opinião</a></li>
+                                <li>+351 911 911 911</li>
+                                <li>MegaSport@email.pt</li>
+                                <li>Abertos das 8:30 as 18:00</li>
                             </ul>
                         </div>
                     </div>
