--- a/srcproj/detalhe.html
+++ b/srcproj/detalhe.html
@@ -13,7 +13,8 @@
     <!-- footer and header css -->
     <link rel="stylesheet" href="css/header-footer.css">
     <!-- define language characters -->
-    <meta charset="UTF8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+    <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+    <meta charset="utf-8">
 </head>
 <body onload="ready()">
     <header id="header">
@@ -42,7 +43,7 @@
     <div id="container" class="container">
         <div class="card">
             <div class="img-holder">
-                <img id="image" src="" >
+                <img id="image" src="#" alt="image">
             </div>
             <div class="text-holder">
                 <p id="name"></p>
