--- a/srcproj/listagem.html
+++ b/srcproj/listagem.html
@@ -13,7 +13,9 @@
     <!-- footer and header css -->
     <link rel="stylesheet" href="css/header-footer.css">
     <!-- define language characters -->
-    <meta charset="UTF8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+    <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+    <meta charset="utf-8">
+
 </head>
 <body onload="ready()">
     <header id="header">
