--- a/srcproj/index.html
+++ b/srcproj/index.html
@@ -137,14 +137,16 @@
                     <div class="row row-footer">
                         <div class="col-sm-4 col-xs-12">
                             <div class="left-f">
-                                <img src="img/footerlogo.png" alt="">
+                                <figure>
+                                    <img src="img/footerlogo.png" alt="">
+                                    <figcaption class="figcap">Cada vez mais rapidos.</figcaption>
+                                </figure>
                             </div>
                         </div>
                         <div class="col-sm-4 col-xs-12">
                             <ul class="lista-footer none">
                                 <li class="list-title">MegaSport</li>
                                 <li class="goTop"><a onclick="goTop(); return false;">Sobre nós</a></li>
-                                <li><a href="">Lojas</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-4 col-xs-12 pada">
