--- a/srcproj/form.html
+++ b/srcproj/form.html
@@ -92,14 +92,16 @@
                 <div class="row row-footer">
                     <div class="col-sm-4 col-xs-12">
                         <div class="left-f">
-                            <img src="img/footerlogo.png" alt="">
+                            <figure>
+                                <img src="img/footerlogo.png" alt="">
+                                <figcaption class="figcap">Cada vez mais rapidos.</figcaption>
+                            </figure>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <ul class="lista-footer none">
                             <li class="list-title">MegaSport</li>
-                            <li><a href="">Sobre nós</a></li>
-                            <li><a href="">Lojas</a></li>
+                            <li><a href="index.html">Sobre nós</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-xs-12 pad">
